[tool.poetry]
name = "combinis visits analyzer"
version = "0.1.0"
description = ""
authors = ["Adrien Carpentier <me@adriencarpentier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
