[project]
name = "conbini-visits-analyzer"
version = "0.1.0"
description = ""
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pandas>=1.5.3",
    "requests>=2.32.3",
]
requires-python = ">=3.9,<3.14"
readme = "README.md"
